# implicitus

./: .gitignore  BACKLOG.md  LICENSE  README.md  canvas_update.patch  constants.json  constants.py  dump.txt  full spec.rtf  package-lock.json  package.json  playwright.patch  pytest.ini  setup.py  test_slice.py
ai_adapter/: adapter.py  csg_adapter.py  inference_pipeline.py  install_mistral.py  main.py  rust_primitives.py  token_counter.py  transformers_temp.py
canvas_api/: package.json  server.js
core_engine/: Cargo.toml  __init__.py  build.rs  core_engine.py
core_engine/src/: lib.rs  slice.rs
core_engine/src/primitives/: mod.rs
core_engine/src/spatial/: octree.rs
core_engine/src/uniform/: hex.rs
core_engine/src/voronoi/: cells.rs  mod.rs  sampling.rs  sdf.rs
core_engine/tests/: box_slice.rs  hex_lattice.rs  hex_lattice_py.rs  multi_infill_slice.rs  precomputed_lattice.rs  sampling.rs  seed_patterns_slice.rs  slice_model.rs  sphere_sdf.rs  uniform_hex.rs  voronoi_infill.rs  voronoi_mesh.rs  voronoi_slice.rs  voronoi_uniform_infill.rs  voronoi_uniform_sdf.rs  voronoi_uniform_slice.rs  voronoi_wall_thickness.rs  wall_thickness_slice.rs
design_api/: conversation_log.jsonl  main.py  pyproject.toml
docs/: api_reference.md  mesh_generation.md
examples/: helmet_shell.json
implicitus-ui/: .babelrc  README.md  eslint.config.js  glsl-macro.d.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
logs/: UNIFORM_CELL_DUMP.json
rendered_specs/: .gitignore  86fb885e-a05e-48bb-95e6-2d044e816fd5.json  ce2a5acf-3742-4d0d-b0d7-a8d199a5bb24.json
schema/: implicitus.proto
scripts/: slice_debug.py
(+110 files in other folders)
