[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.11"

[dependencies]
prost = "0.11"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
pyo3 = { version = "0.21", features = ["extension-module"] }

[lib]
name = "core_engine"
crate-type = ["cdylib", "rlib"]
