[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.11"
pyo3-build-config = { version = "0.22", features = ["resolve-config"] }
serde_json = "1.0"

[dependencies]
prost = "0.11"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

rayon = "1.8"
numpy = "0.22"
ndarray = "0.16"

pyo3 = { version = "0.22", features = ["abi3-py39"] }
kiddo = "5.2"

[features]
default = []
extension-module = ["pyo3/extension-module"]


[lib]
name = "core_engine"
crate-type = ["cdylib", "rlib"]
